plugins {
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'idea'
    id 'java'
    id 'com.diffplug.spotless' version '6.25.0' apply false
    id 'com.google.protobuf' version '0.9.4' apply false
}

wrapper {
    gradleVersion = '8.10.2'
}

bootJar { enabled = false }
jar { enabled = true }

ext {
    // Boot 3.5.16 BOM 의 jackson-bom 과 같은 값.
    // dependency-management 가 적용되지 않는 cluster-agent-spring-boot-starter 가 참조한다.
    jacksonVersion = '2.21.4'

    // ---- BOM property 오버라이드 ----
    // 개별 아티팩트에 버전을 박으면 같은 계열의 나머지가 BOM 값으로 남아 갈라진다.
    // 실제로 jackson 은 core/databind 만 2.17.2 이고 dataformat-yaml 등 6개가 2.15.4 로
    // 남아 있었다. BOM property 로 올리면 계열 전체가 함께 움직인다.
    // httpclient5, mariadb, commons-lang3 오버라이드는 제거했다.
    // Boot 3.5.16 BOM 이 각각 5.5.2 / 3.5.8 / 3.17.0 을 주며, 이전에 오버라이드가
    // 필요했던 이유(3.2.5 BOM 의 commons-lang3 3.13.0 이 commons-compress 1.27.1 의
    // ArrayFill 을 못 채움)가 해소됐다.
    //
    // libs/* 는 publish 대상이라 명시 버전을 유지한다. 버전을 지우면 생성된 POM 의
    // <dependencies> 에 version 없는 항목이 남고, 소비자가 해석하지 못한다.

    lombokVersion = '1.18.36'
    mapstructVersion = '1.5.5.Final'
    lombokMapstructBindingVersion = '0.2.0'
    bouncyCastleVersion = '1.78.1'
    caffeineVersion = '3.1.8'
    reactorVersion = '3.6.5'
    resilience4jVersion = '2.2.0'
    micrometerVersion = '1.13.4'
    // Pulumi Automation API. provider 플러그인 버전은 Dockerfile.pulumi 가 단독 출처다 —
    // 런타임 아티팩트라 컴파일 의존성이 아니다.
    pulumiSdkVersion = '1.36.3'
}

// AllProjects 설정
allprojects {
    group = 'com.aipaas.anycloud'
    version = '0.0.1-SNAPSHOT'

    // sourceCompatibility 를 project 속성으로 직접 쓰면 JavaPluginConvention 경로를 타는데
    // Gradle 9 에서 제거됐다. java 확장으로 설정한다.
    plugins.withId('java') {
        java {
            sourceCompatibility = JavaVersion.VERSION_21
        }
    }

    repositories {
        mavenCentral()
        gradlePluginPortal()
        google()

        // for QueryDSL
        maven { url "https://plugins.gradle.org/m2/" }
    }
}

// SubProjects 설정 — anycloud 같이 root 가 spring-boot-application 인 모듈만.
// 제외:
//  - loadtest        : 비 Spring 모듈, 자체 build.gradle
//  - cluster-agent-spring-boot-starter : library 모듈로 외부 consumer 한테 publish 됨 — 자체적으로
//                       필요한 plugin/dependency 만 declare. root 에서 webflux 같은 anycloud 전용
//                       dependency 를 transitively 끌어가면 외부 consumer POM 오염됨.
configure(subprojects.findAll { it.name != 'loadtest' && it.name != 'cluster-agent-spring-boot-starter' }) {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    // 관리하는 모듈에 공통 dependencies
    dependencies {
        compileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        implementation 'org.springframework.boot:spring-boot-starter-webflux'
    }
}

bootRun {
    String activeProfile = System.properties['spring.profiles.active']
    systemProperty "spring.profiles.active", activeProfile
}

// =============================================================================
// Jacoco test coverage — anycloud / starter 2 모듈만 측정. loadtest 는 비-Spring,
// cluster-observability-starter 는 별도 자체 build 파일.
//
// 사용:
//   ./gradlew :anycloud:test :anycloud:jacocoTestReport
//   ./gradlew :cluster-agent-spring-boot-starter:test :cluster-agent-spring-boot-starter:jacocoTestReport
//   open apps/anycloud/build/reports/jacoco/test/html/index.html
//
// CI gate (선택): ./gradlew jacocoTestCoverageVerification — INSTRUCTION 60% 미달 시 fail.
// =============================================================================
configure(subprojects.findAll {
    it.name == 'anycloud'
            || it.name == 'cluster-agent-spring-boot-starter'
            || it.name == 'cluster-agent-features-spring-boot-starter'
}) {
    apply plugin: 'jacoco'

    jacoco {
        toolVersion = '0.8.12'
    }

    // Generated / DTO 코드는 측정 제외 — getter/setter / proto stub 은 우리가 통제 못 하는 noise.
    def coverageExcludes = [
            '**/gen/agent/v1/**',
            'com/aipaas/anycloud/agent/v1/**',
            '**/dto/**',
            '**/*Dto*',
    ]

    // Library 모듈 (java-library) 은 자체 build.gradle 에서 java/test task 가 늦게 register —
    // afterEvaluate 로 모든 plugin 이 settle 된 후 wiring.
    afterEvaluate {
        tasks.named('test') {
            finalizedBy 'jacocoTestReport'
        }

        tasks.named('jacocoTestReport') {
            dependsOn 'test'
            reports {
                xml.required = true
                html.required = true
                csv.required = false
            }
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: coverageExcludes)
            }))
        }

        tasks.named('jacocoTestCoverageVerification') {
            dependsOn 'jacocoTestReport'
            violationRules {
                rule {
                    limit {
                        counter = 'INSTRUCTION'
                        value = 'COVEREDRATIO'
                        minimum = 0.18
                    }
                }
            }
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: coverageExcludes)
            }))
        }
    }
}
